# data_visualization

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb
src/data_visualization/: boxplot.py  corrplot.py  histogram.py  scatterplot.py
src/magmaviz/: __init__.py
tests/: test_data_visualization.py
