[tool.poetry]
name = "data_visualization"
version = "0.1.0"
description = "This package consists of four different data visualization functions that can be used to visualize the numerical features present in the data."
authors = ["Abdul Moid Mohammed, Mukund Iyer, Irene Yan, Rubén De la Garza Macías"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
